<resources>
    <string name="app_name">MyFirstAndroidProject</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_place">birth place</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="will_smith">Will Smith</string>
    <string name="hi_there_i_m_string_will_smith">Hi There! I\'m@string/will_smith</string>
    <string name="_17_follower">17 follower</string>
    <string name="_0_following">0 following</string>
    <string name="follow">follow</string>
    <string name="profile_picture">profile picture</string>
    <string name="kaneki_ken">Kaneki Ken</string>
    <string name="_20_subscribers">20 subscribers</string>
    <string name="subscribe">Subscribe</string>
    <string name="videos">Videos</string>
    <string name="playlist">Playlist</string>
    <string name="shorts">Shorts</string>
    <string name="quot_i_will_press_forward_like_a_centipede_quot">\"I will press forward, like a centipede\"</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="enter_the_first_number_you_want_to_add">Enter the first number you want to add</string>
    <string name="enter_the_second_number_you_want_to_add">Enter the second number you want to add</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="submit">Submit</string>
    <string name="your_opinion_matter_to_us">Your Opinion Matter to Us</string>
    <string name="are_you_happy_with_our_services">Are you happy with our services?</string>
    <string name="tell_us_more">Tell us more:</string>
    <string name="feedback">feedback</string>
    <string name="we_value_your_opinion">We value your opinion</string>
    <string name="hint">hint</string>
    <string name="you_have_rated">You have rated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animal_lover_app">Animal Lover App</string>
    <string name="meow">Meow</string>
    <string name="wang">Wang</string>
    <string name="about_app">About App</string>
    <string name="home">home</string>
    <string name="about">About</string>
    <string name="this_application_was_created_with_for_all_animal_lovers_n_nit_is_a_simple_demonstration_project_built_using_android_studio_showcasing_navigation_between_fragments_and_basic_user_interface_elements_n_nfeel_free_to_explore_and_enjoy_the_sounds">This application was created with ❤️ for all animal lovers. \n\nIt is a simple demonstration project built using Android Studio, showcasing navigation between fragments and basic user interface elements. \n\nFeel free to explore and enjoy the sounds!</string>
    <string name="this_is_an_animal_lover_app">This is an animal Lover App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="animal_lover">Animal Lover</string>
    <string name="hug">hug</string>


</resources>