<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ETResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="500dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ETnum2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/ETnum2" />

    <EditText
        android:id="@+id/ETnum1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/enter_the_first_number_you_want_to_add"
        android:textColor="@android:color/black"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/ETResult"
        app:layout_constraintStart_toStartOf="@+id/ETResult"
        app:layout_constraintTop_toBottomOf="@+id/ETResult" />

    <EditText
        android:id="@+id/ETnum2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/enter_the_second_number_you_want_to_add"
        android:textColor="@android:color/black"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/ETnum1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ETnum1"
        app:layout_constraintTop_toBottomOf="@+id/ETnum1" />
</androidx.constraintlayout.widget.ConstraintLayout>
