<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FeedbackLayout"
    android:background="@color/sunshine"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginTop="124dp"
        android:background="@drawable/round"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/are_you_happy_with_our_services"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <RatingBar
        android:id="@+id/RateBarFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.constraintlayout.widget.Group android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/we_value_your_opinion"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ETFeedback"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="@+id/RateBarFeedback"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RateBarFeedback"
        app:layout_constraintTop_toBottomOf="@+id/RateBarFeedback">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/BtnFeedback"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/ETFeedback"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/ETFeedback"
        app:layout_constraintTop_toBottomOf="@+id/ETFeedback" />

    <TextView
        android:id="@+id/TVRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_rated"
        app:layout_constraintEnd_toEndOf="@+id/RateBarFeedback"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/RateBarFeedback"
        app:layout_constraintTop_toBottomOf="@+id/RateBarFeedback" />

</androidx.constraintlayout.widget.ConstraintLayout>